2004-03-04  Tomohiro KUBOTA  <kubota@debian.org>

	* "-p"/"--pic" option was not enabled when using gdk-pixbuf2.
	  Fixed.

2004-03-03  Araki Ken  <arakiken@users.sf.net>

	* Moved ml_line_copy_color_reversed_flag() to ml_logical_visual.c
	  from ml_line.c.

	* Added ml_char_copy_color_revsered_flag()
	  Removed ml_char_is_color_reversed()

	* Crossed over line->chars array boundary in shape_iscii(ml_shape.c) and
	  ml_iscii_convert_logical_char_index_to_visual(). Fixed. 

2004-03-01  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: ignore leading zeroes in numeric
	arguments of escape sequences to pass vttest.

2004-02-29  MINAMI Hirokazu  <minami@mistfall.net>

	* documentation updates.

2004-02-27  MINAMI Hirokazu  <minami@mistfall.net>

	* configure.in, aclocal.m4, configure:
	- use PKG_CHECK_MODULES() where possible.
	- accept "gdk-pixbuf" as a target of with-imagelib.
	- mlconfig/mlterm-menu will be linked against gtk+-2.x when
	  apropreate libraries are available.

	* xwindow/x_imagelib_gdk.c: minor code cleanup.

	* mlterm/ml_edit.c: try to feed a line if next char does not
	fit in curent line.

2004-02-22  Araki Ken  <arakiken@users.sf.net>

	* Added ml_str.[ch].(separated from ml_char.[ch].)

2004-02-20  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: setsid() seems to detach
	control terminal. Don't call ioctl TIOCNOTTY when HAVE_SETSID
	is defined.

2004-02-19  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: stopped use of ioctl TICNOTTY
	on glibc2 for happy valgrinding.

2004-02-16  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Don't use -no-undefined libtool option, expect that
	$allow_undefined_flag is "unsupported".

2004-02-13  Tomohiro KUBOTA  <kubota@debian.org>

	* configure: synchronized with configure.in (2004-01-31).

2004-02-12  MINAMI Hirokazu  <minami@mistfall.net>

	* **/Makefile.in:
	- use @X_LIBS@/@X_PRE_LIBS@/@X_EXTRA_LIBS@ when possible.