@@ -290,6 +290,20 @@ AC_ARG_WITH(libltdl,
 # We don't check here wheter libltdl is installed. (See kiklib/src/configure.in)
 
 #
+# --- Xdnd ---
+#
+AC_ARG_ENABLE(dnd,
+	[  --enable-dnd           dnd[default=enabled]],
+	dnd=$enable_dnd)
+if test "$dnd" = "no" ; then
+	DND_CFLAGS="-DDISABLE_XDND"
+else
+	DND_LIBS="x_dnd.o"
+fi
+AC_SUBST(DND_CFLAGS)
+AC_SUBST(DND_LIBS)
+
+#
 # --- scrollbar plugins ---
 #
 # defaut settings
